--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -4,6 +4,7 @@ imports:
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
+    distance_multiplier: 3600 # seconds per distance unit (note: 0 = fixed 60 seconds)
     locale: en
 
 framework:
